# ILaas-agent

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  CODEX.md  CdC-ilaas-agent-v2.md  CdC.md  Ilaas-claude  Ilaas-codex  Ilaas-doctor  Ilaas-opencode  Ilaas-servers  README.md  README_codex_ilaas_litellm.md  README_codex_ilaas_litellm_diagnostic.md  codex-ilaas-responses-proxy  glm52-claude  glm52-codex  glm52-opencode  install.ps1  install.py  install.sh  mistral-codex  openrouter-claude  openrouter-codex  openrouter-opencode  openrouter_session.txt  pyproject.toml  refresh_ilaas_models.py
.github/workflows/: ci.yml
docs/: claude-code.md  codex.md  compatibility.md  conf.py  dependencies.md  economy.md  harness.md  ilaas.md  index.md  interfaces.md  maintainer-notes.md  models.md  opencode.md  openrouter.md  quickstart.md  requirements-plan.md  requirements.txt  tiers.md  troubleshooting.md  windows.md
harness/: hierarchy.json  mcp.json.template
ilaas_agents/: __init__.py  cli.py  commands.py  config.py  deps.py  doctor.py  glm52.py  harness.py  install.py  models.py  openrouter.py  paths.py  processes.py  runners.py  smoke.py  tiers.py  wrappers.py
proxies/: __init__.py  claude_ilaas_messages_proxy.py  codex_ilaas_responses_proxy.py  openrouter_anthropic_proxy.py  retry_policy.py
scripts/: clone_isolated_check.py  token_economy.py  wine_windows_wrapper_check.py
tests/: test_cli_tiers_set.py  test_commands.py  test_deps.py  test_doctor.py  test_glm52.py  test_harness.py  test_harness_hierarchy.py  test_install.py  test_models.py  test_openrouter.py  test_openrouter_proxy.py  test_paths.py  test_processes.py  test_proxies.py  test_proxy_fidelity.py  test_proxy_streaming.py  test_read_cost_gate.py  test_retry_policy.py  test_runners.py  test_smoke.py  test_tiers.py  test_token_economy.py  test_wrappers.py
(+7 files in other folders)
