[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ilaas-code-agents"
version = "0.1.0"
description = "Local ILaaS integration helpers for Codex CLI, Claude Code, and OpenCode."
requires-python = ">=3.10"
dependencies = []

[tool.setuptools.packages.find]
include = ["ilaas_agents*"]
