[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ilaas-code-agents"
version = "0.1.0"
description = "Local ILaaS integration helpers for Codex CLI, Claude Code, and OpenCode."
license = "GPL-2.0-or-later"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
ilaas-agent = "ilaas_agents.cli:main"

[tool.setuptools.packages.find]
include = ["ilaas_agents*", "proxies*"]

[tool.ruff]
line-length = 140
target-version = "py310"

[tool.ruff.lint]
# Baseline: pyflakes (F) + pycodestyle errors that catch real bugs (E7 undefined,
# E4 imports, E9 syntax). Line-length (E5) is intentionally excluded.
select = ["E4", "E7", "E9", "F"]

[tool.mypy]
ignore_missing_imports = true
# processes.py signal/Popen handling is frozen (plan S2); excluded from
# type-checking. Non-strict baseline to start; --strict is the ratchet target.
exclude = ["ilaas_agents/processes.py"]
